<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_40"
    tools:context=".configviews.ConfigWelcomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/planet_X_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_0"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_0"
        android:src="@drawable/planet_x_logo"
        android:contentDescription="@string/planet_x_logo_image"
        app:layout_constraintBottom_toTopOf="@+id/intro_message"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro_message"
        android:layout_width="@dimen/margin_0"
        android:layout_height="@dimen/margin_0"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/config_intro"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintBottom_toTopOf="@+id/intro_next_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_X_logo"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:id="@+id/intro_next_message"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_0"
        android:layout_marginTop="@dimen/margin_0"
        android:layout_marginBottom="@dimen/margin_0"
        android:gravity="center"
        android:text="@string/config_intro_next"
        android:textSize="@dimen/font_size_small"
        android:textColor="@color/white"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/config_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_message" />

    <Button
        android:id="@+id/config_start_button"
        style="@style/NavigationButton"
        android:layout_width="@dimen/nav_button_width"
        android:layout_height="@dimen/nav_button_height"
        android:layout_marginTop="@dimen/margin_0"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/start_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_next_message" />

</androidx.constraintlayout.widget.ConstraintLayout>