<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configviews.ConfigDataDisplayFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_0"
        android:layout_marginTop="@dimen/margin_16"
        android:src="@drawable/neon_astronaut_blue"
        android:contentDescription="@string/astronaut_image"
        app:layout_constraintBottom_toTopOf="@+id/previous_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5" />

    <Button
        android:id="@+id/connect_button"
        style="@style/NavigationButton"
        android:layout_width="@dimen/nav_button_width"
        android:layout_height="@dimen/nav_button_height"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/connect_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/previous_button"
        style="@style/NavigationButton"
        android:layout_width="@dimen/nav_button_width"
        android:layout_height="@dimen/nav_button_height"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/prev_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/user_id"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_id_value"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_8"
        android:textColor="@color/accentColor"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_id" />

    <TextView
        android:id="@+id/code_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/code_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_id_value" />

    <TextView
        android:id="@+id/code_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_8"
        android:textColor="@color/accentColor"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/code_name" />

    <ProgressBar
        android:id="@+id/is_loading_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/nav_button_progress_bar_diameter"
        android:layout_height="@dimen/nav_button_progress_bar_diameter"
        android:elevation="@dimen/progress_bar_elevation"
        android:indeterminateTint="@color/accentColor"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/connect_button"
        app:layout_constraintEnd_toEndOf="@+id/connect_button"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="@+id/connect_button"
        app:layout_constraintTop_toTopOf="@+id/connect_button" />
</androidx.constraintlayout.widget.ConstraintLayout>